# WTF

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WTF.slnx  agent-demo.fsx  demo.fsx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
compositor/: meson.build  wtf-panel.c  wtf-panel.h  wtf-shim.c  wtf.h
docs/: AOT.md  CONFIG-EDITING.md  appearance.md  architecture.md  configuration.md  faq.md  index.md  installation.md  keybindings.md  quickstart.md  troubleshooting.md  wtfctl.md
examples/: config.fsx
examples/FixturePlugins/: FixturePlugins.fs  FixturePlugins.fsproj
examples/SpiralLayout/: README.md  SpiralLayout.fs  SpiralLayout.fsproj
packaging/: wtf-portals.conf  wtf.desktop
packaging/arch/: PKGBUILD
packaging/patches/: scenefx-glass-refraction.patch  scenefx-primary-node-fallback.patch
packaging/rpm/: wtf-wm.spec
scripts/: aot-publish.sh  build-deb.sh  build-scenefx.sh  build-site.py  build-wlroots.sh  build.sh  ci-inside.sh  fetch-deps-local.sh  get-wtf.sh  install-deps.sh  install-stage.sh  install.sh  run-clients.sh  run.sh  smoke-drm.sh  smoke-headless.sh  wtf-edit  wtf-record  wtf-reload  wtf-session  wtf-update
site/: index.html
src/WTF.Agent/: Brain.fs  WTF.Agent.fsproj
src/WTF.Bar/: Program.fs  WTF.Bar.fsproj
src/WTF.Client/: BarModel.fs  BarRender.fs  ClientConfig.fs  DesktopEntry.fs  Fuzzy.fs  OmniboxModel.fs  OmniboxRender.fs  Panel.fs  Render.fs  Socket.fs  WTF.Client.fsproj
src/WTF.Config/: ConfigEngine.fs  WTF.Config.fsproj
src/WTF.Core/: Agent.fs  Color.fs  Command.fs  Config.fs  Effect.fs  Geometry.fs  History.fs  Layout.fs  Palette.fs  Plugin.fs  Protocol.fs  Session.fs  Stack.fs  Surface.fs  WTF.Core.fsproj  World.fs
src/WTF.Desktop/: Aggregator.fs  Clients.fs  DBusInterfaces.fs  Desktop.fs  DesktopJson.fs  Models.fs  NotificationDaemon.fs  WTF.Desktop.fsproj
src/WTF.Host/: Bridge.fs  Chord.fs  Ffi.fs  Heif.fs  Ipc.fs  Program.fs  Session.fs  WTF.Host.fsproj  Wallpaper.fs
src/WTF.Omnibox/: Program.fs  WTF.Omnibox.fsproj
src/WTF.Plugins/: PluginLoader.fs  WTF.Plugins.fsproj
src/WTF.TypeProviders/: ConfigProviders.fs  DBusIntrospectionProvider.fs  RuntimeTypes.fs  WTF.TypeProviders.fsproj
src/wtfctl/: Program.fs  wtfctl.fsproj
tests/WTF.Agent.Tests/: BrainTests.fs  WTF.Agent.Tests.fsproj
tests/WTF.Client.Tests/: Tests.fs  WTF.Client.Tests.fsproj
tests/WTF.Config.Tests/: ConfigLoaderTests.fs  TypeProviderConfigTests.fs  WTF.Config.Tests.fsproj
tests/WTF.Core.Tests/: AgentToolsTests.fs  AppearanceTests.fs  BridgeTests.fs  ChordTests.fs  ColorTests.fs  ConfigTests.fs  EffectTests.fs  FloatingTests.fs  GeometryTests.fs  HistoryTests.fs  IpcTests.fs  LayoutTests.fs  PaletteTests.fs  ProtocolTests.fs  RectTests.fs  ReducerTests.fs  SessionIOTests.fs  SessionTests.fs  StackTests.fs  SurfaceTests.fs  WTF.Core.Tests.fsproj  WallpaperPaletteTests.fs  WallpaperTests.fs  WorkspaceTypeTests.fs
tests/WTF.Desktop.Tests/: AggregatorTests.fs  DesktopJsonTests.fs  MediaKeyTests.fs  NotificationDaemonTests.fs  NotificationStoreTests.fs  StateMapperTests.fs  VolumeTests.fs  WTF.Desktop.Tests.fsproj
tests/WTF.Plugins.Tests/: PluginLoaderTests.fs  WTF.Plugins.Tests.fsproj
tests/WTF.TypeProviders.Tests/: ConfigProvidersTests.fs  InternalTests.fs  Tests.fs  WTF.TypeProviders.Tests.fsproj
tests/WTF.TypeProviders.Tests/data/: evdev.lst  org.wtf.Fixtures.xml
tests/WTF.TypeProviders.Tests/data/applications/: firefox.desktop  foot.desktop  hidden.desktop  notanapp.desktop  settings.desktop
